# ParkOut

./: CMakeLists.txt  README.md  Resources.qrc  autosolveria.cpp  autosolveria.h  busitem.cpp  busitem.h  estadojogo.h  gameconfig.h  gamepersistence.cpp  gamepersistence.h  gamewidget.cpp  gamewidget.h  levelloader.cpp  levelloader.h  levels.json  levelselectwidget.h  leverloader.cpp  leverloader.h  mainwindow.cpp  mainwindow.h  menuwidget.cpp  menuwidget.h  parkingarea.cpp  parkingarea.h  passengeritem.cpp  passengeritem.h  passengerqueue.cpp  passengerqueue.h  selectnivelwidget.cpp  selectnivelwidget.h  testes.cpp  tst_autosolveria.cpp
android/: AndroidManifest.xml
src/json/: levels.json  progress.json  recordes.json
